# game2-metroidvania

./: .gitignore  CMakeLists.txt  README.md
assets/data/: boss_attacks.json  boss_dead.json  boss_desperate_radial.json  boss_enrage_slash.json  boss_hurt.json  boss_stance_idle.json  boss_stance_slash.json  enemy_flyer_attack.json  enemy_flyer_chase.json  enemy_flyer_dead.json  enemy_flyer_hurt.json  enemy_flyer_patrol.json  enemy_ranged_attack.json  enemy_ranged_chase.json  enemy_ranged_dead.json  enemy_ranged_hurt.json  enemy_ranged_patrol.json  enemy_walker_attack.json  enemy_walker_chase.json  enemy_walker_dead.json  enemy_walker_hurt.json  enemy_walker_patrol.json  player_attack.json  player_attacks.json  player_fall.json  player_idle.json  player_jump.json  player_run.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake
docs/progress/: sessao-01.md  sessao-02.md  sessao-03.md  sessao-04.md  sessao-05.md  sessao-06.md  sessao-07.md
engine/: CMakeLists.txt
engine/include/engine/animation/: AnimationClip.h  AttackTable.h
engine/include/engine/audio/: AudioBuffer.h  AudioEngine.h  AudioSource.h
engine/include/engine/core/: App.h  Log.h  Window.h
engine/include/engine/ecs/: Entity.h  Registry.h  SparseSet.h
engine/include/engine/input/: Action.h  InputManager.h
engine/include/engine/map/: TileMap.h  TileMapRenderer.h
engine/include/engine/physics/: CollisionCategories.h  DebugDraw.h  PhysicsConstants.h  PhysicsWorld.h
engine/include/engine/render/: Camera.h  Framebuffer.h  FullscreenQuad.h  Mesh.h  MeshRenderer.h  ParallaxRenderer.h  ParticleSystem.h  PostProcessStack.h  Shader.h  SpriteBatch.h  Texture.h  Texture3D.h
engine/include/engine/resources/: ResourceManager.h
engine/include/engine/save/: SaveSystem.h
engine/include/engine/ui/: Font.h  TextRenderer.h
engine/src/animation/: AnimationClip.cpp  AttackTable.cpp
engine/src/audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioSource.cpp
engine/src/core/: App.cpp  Window.cpp
engine/src/ecs/: Registry.cpp
engine/src/input/: InputManager.cpp
engine/src/map/: TileMap.cpp  TileMapRenderer.cpp
engine/src/physics/: DebugDraw.cpp  PhysicsWorld.cpp
engine/src/render/: Camera.cpp  Framebuffer.cpp  FullscreenQuad.cpp  Mesh.cpp  MeshRenderer.cpp  ParallaxRenderer.cpp  ParticleSystem.cpp  PostProcessStack.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  Texture3D.cpp
engine/src/save/: SaveSystem.cpp
engine/src/ui/: Font.cpp  TextRenderer.cpp
game/: CMakeLists.txt
game/src/: main.cpp
game/src/components/: Animator.h  BossPhaseData.h  EnemyAI.h  Health.h  Hitbox.h  Hurtbox.h  PlayerControl.h  Projectile.h  RigidBody.h  SpriteRenderer.h  Transform.h
game/src/data/: BossAttackTable.cpp  BossAttackTable.h
game/src/scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SceneId.h
game/src/systems/: AnimationSystem.cpp  AnimationSystem.h  BossLogic.cpp  BossLogic.h  CameraSystem.cpp  CameraSystem.h  CombatSystem.cpp  CombatSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  EnemyCombatSystem.cpp  EnemyCombatSystem.h  PhysicsSyncSystem.cpp  PhysicsSyncSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h
game/src/ui/: Hud.cpp  Hud.h
scripts/: download_assets.sh  gen_boss_sheet.py  gen_enemy_sheets.py  gen_lut.py  gen_music.py  gen_parallax.py  gen_particles.py  gen_player_sheet.py  gen_player_sheet_polished.py  gen_sfx.py  gen_test_tmx.py  gen_tileset.py  repack_enemy_sheet.py  repack_player_sheet.py
shaders/: blur_dual_filter.frag  bright_pass.frag  clear.frag  clear.vert  composite.frag  debug_line.frag  debug_line.vert  god_rays.frag  mesh.frag  mesh.vert  particle.frag  particle.vert  post_fullscreen.vert  sprite.frag  sprite.vert
